--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Enums\DirectionEnum.cs" />
+    <Compile Include="Enums\ForceEnum.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Boulder.cs" />
     <Compile Include="Models\Diamond.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="LevelData.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapLoader.cs" />
+    <Compile Include="OutputCMD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
   </ItemGroup>
