--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -57,13 +57,13 @@
     <Compile Include="Models\SteelWall.cs" />
     <Compile Include="Models\Wall.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Level.cs" />
+    <Compile Include="Models\Level.cs" />
     <Compile Include="LevelData.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapLoader.cs" />
     <Compile Include="OutputCMD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tile.cs" />
+    <Compile Include="Models\Tile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
