GravitySensitiveEntity, Level has startTile
GravitySensitiveEntities can only be pushed all sides except up.
Level now doesn't hold a Rockford but a tile

--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Enums\EntityTypesEnum.cs" />
     <Compile Include="Models\Exit.cs" />
     <Compile Include="Models\FireFly.cs" />
+    <Compile Include="Models\GravitySensitiveEntity.cs" />
     <Compile Include="Models\Mud.cs" />
     <Compile Include="Models\Rockford.cs" />
     <Compile Include="Models\SteelWall.cs" />
