--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Enums\DirectionEnum.cs" />
     <Compile Include="Enums\ForceEnum.cs" />
+    <Compile Include="InputCMD.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Boulder.cs" />
     <Compile Include="Models\Diamond.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="Models\Level.cs" />
     <Compile Include="LevelData.cs" />
     <Compile Include="MapLoader.cs" />
-    <Compile Include="OutputCMD.cs" />
+    <Compile Include="View\OutputCMD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Tile.cs" />
   </ItemGroup>
