--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Enums\DirectionEnum.cs" />
     <Compile Include="Enums\ForceEnum.cs" />
     <Compile Include="Models\StationaryEntity.cs" />
+    <Compile Include="Models\Tnt.cs" />
     <Compile Include="View\InputCMD.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Boulder.cs" />
