--- a/BoulderDash2019/BoulderDash2019.csproj
+++ b/BoulderDash2019/BoulderDash2019.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Enums\DirectionEnum.cs" />
     <Compile Include="Enums\ForceEnum.cs" />
+    <Compile Include="Models\HardenedMush.cs" />
     <Compile Include="Models\StationaryEntity.cs" />
     <Compile Include="Models\Tnt.cs" />
     <Compile Include="View\InputCMD.cs" />
